tests/class_statics/class_static_prototype.js
class A {
  static prototype: any; // error
}
